# final-project-s87thafe

./: .gitignore  CITATION  README.md  df_odds.csv  df_sports_the_odds_api.csv  environment.yml  info.txt  pyproject.toml  setup.cfg  test_odds.pkl
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: arbitrage_analysis.tex  arbitrage_analysis_pres.tex  task_create_paper.py  task_paper.py
src/arbitrage_analysis/: __init__.py  config.py  task_folder_structure.py
src/arbitrage_analysis/analysis/: task_analysis.py  task_calculate_arbitrage.py  task_estimate_yield.py  task_odds_kernel_density_estimate.py  task_plot_kde.py  task_plot_stakes.py
src/arbitrage_analysis/data/: df_matches_rapid_api.csv  df_odds.csv  df_odds_rapid_api.csv  df_odds_the_odds_api.csv  df_sports_the_odds_api.csv
src/arbitrage_analysis/data_management/: __init__.py  retrieve_best_odds.py  retrieve_data.ipynb  retrieve_data.py  retrieve_data_rapid_api.py  retrieve_data_the_odds_api.py  task_data_management.py  task_merge_data.py  task_retrieve_best_odds.py  task_retrieve_data_yfinance.py  task_retrieve_odds_rapid_api.py  (+3 more)
tests/analysis/: show_data.py  test_calculate_arbitrage.py  test_calculate_stakes.py  test_estimate_yield.py  test_model.py  test_odds_kernel_density_estimate.py  test_predict.py  test_ticker_growth.py
tests/data_management/: show_data.py  test_clean_data.py  test_merge_data.py  test_retrieve_data_rapid_api.py  test_retrieve_data_the_odds_api.py  test_retrieve_data_yfinance.py  test_seperate_best_odds.py  test_standardize_data.py
(+8 files in other folders)
