[metadata]
name = arbitrage_analysis
description = Arbitrage Analysis in the Sports Betting Market
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s87thafe/arbitrage_analysis
author = Torben Haferkamp
author_email = s87thafe@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/s87thafe/arbitrage_analysis
    Documentation = https://github.com/s87thafe/arbitrage_analysis
    Github = https://github.com/s87thafe/arbitrage_analysis
    Tracker = https://github.com/s87thafe/arbitrage_analysis/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/arbitrage_analysis/_version.py
